--- a/views/degree-audit.ejs
+++ b/views/degree-audit.ejs
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="/stylesheet.css">
 </head>
 <body>
+
+<% let total = 0;
+for (let category of Object.keys(data)){
+    total += data[category]['progress']['credit'];
+}%>
 <div class="container">
     <div class="row">
         <div class="mb-3">
@@ -30,52 +35,105 @@
                     <h5 class="card-title text-center">Degree Audit</h5>
                     <p class="card-text">Some text here.</p>
                     <div class="table-responsive">
-                        <table class="table">
+                        <table class="table table-bordered center">
                             <thead>
                             <tr class="table-warning">
                                 <th scope="col">Category</th>
                                 <th scope="col">Progress</th>
                                 <th scope="col">Taken</th>
                                 <th scope="col">Recommended</th>
+                                <th scope="col">Credits</th>
                             </tr>
                             </thead>
                             <tbody class="table-group-divider">
                             <tr>
                                 <th scope="row" class="table-primary">Core</th>
+                                <td><%= data['core']['progress']['takenNum'] %>
+                                    /<%= data['core']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['core']['taken'].length; i++){ %>
+                                        <%= data['core']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
+                                <td><%= data['core']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">Information</th>
+                                <td><%= data['information']['progress']['takenNum'] %>
+                                    /<%= data['information']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['information']['taken'].length; i++){ %>
+                                        <%= data['information']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
+                                <td><%= data['information']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">Services and Organizations</th>
-                                <td colspan="2"></td>
+                                <td><%= data['servicesAndOrganizations']['progress']['takenNum'] %>
+                                    /<%= data['servicesAndOrganizations']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['servicesAndOrganizations']['taken'].length; i++){ %>
+                                        <%= data['servicesAndOrganizations']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
+                                <td><%= data['servicesAndOrganizations']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">Technology</th>
-                                <td colspan="2"></td>
+                                <td><%= data['technology']['progress']['takenNum'] %>
+                                    /<%= data['technology']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['technology']['taken'].length; i++){ %>
+                                        <%= data['technology']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
+                                <td><%= data['technology']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">People and Communication</th>
-                                <td colspan="2"></td>
+                                <td><%= data['peopleAndCommunities']['progress']['takenNum'] %>
+                                    /<%= data['peopleAndCommunities']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['peopleAndCommunities']['taken'].length; i++){ %>
+                                        <%= data['peopleAndCommunities']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
+                                <td><%= data['peopleAndCommunities']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-info">Capstone</th>
-                                <td colspan="2"></td>
+                                <td><%= data['capstone']['progress']['takenNum'] %>
+                                    /<%= data['capstone']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['capstone']['taken'].length; i++){ %>
+                                        <%= data['capstone']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
+                                <td><%= data['capstone']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-secondary">Elective</th>
-                                <td colspan="2"></td>
+                                <td><%= data['elective']['progress']['takenNum'] %>
+                                    /<%= data['elective']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['elective']['taken'].length; i++){ %>
+                                        <%= data['elective']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
                                 <td></td>
+                                <td><%= data['elective']['progress']['credit'] %></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="table-dark">Total</th>
+                                <td colspan="3"></td>
+                                <td><%= total%>/48</td>
                             </tr>
                             </tbody>
                         </table>
