--- a/views/degree-audit.ejs
+++ b/views/degree-audit.ejs
@@ -18,14 +18,10 @@ for (let category of Object.keys(data)){
 }%>
 <div class="container">
     <div class="row">
-        <div class="mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title text-center">
-                        Graduate Student Tracking System
-                    </h3>
-                </div>
-            </div>
+        <div class="mb-3">                          
+            <h3 class="text-center">
+                    Graduate Student Tracking System
+            </h3> 
         </div>
     </div>
     <div class="row">
