--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -5,3 +5,90 @@
 .center {
     display :inline-block;
 }
+body {
+    background: #d5ecfc;;
+}
+h3 {
+    padding: 20px 30px;
+    font-size: 40px;
+}
+h5 {
+    padding: 20px 20px;
+    font-size: 25px;
+    font-weight: 400;
+    color: #13294B;
+}
+.container {
+    padding: 33px 30px;
+}
+.card{
+    
+    border: 0;
+    border-radius: 0.75rem;
+}
+
+/* #selectcourse {
+    background: transparent;
+} */
+
+
+/* CSS */
+.button-81 {
+    background-color: #1e293b;
+    color: rgb(245, 238, 238);
+    border: 0;
+    border-radius: 1.5rem;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1;
+    padding: 0.75rem 1rem;
+    transition: all .1s cubic-bezier(.4, 0, .2, 1);
+    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+    touch-action: manipulation;
+}
+
+.button-81:hover {
+    background-color: #fff;
+    color: #1e293b;
+}
+
+
+.button-add {
+    background-color: #FFFFFF;
+    border: 0;
+    border-radius: .5rem;
+    font-size: 1rem;
+    padding: .4rem 1rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.button-add:hover {
+    background-color: rgb(249,250,251);
+}
+
+.button-add:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+.button-38:focus-visible {
+    box-shadow: none;
+}
+.btn-remove {
+    background-color: #f2f2f2;
+    border: 0;
+    border-radius: .5rem;
+    font-size: 1rem;
+    padding: .4rem 1rem;
+    text-align: center;
+    cursor: pointer;
+}
+.btn-remove:hover {
+    background-color: #dfdede;
+}
+.table-responsive {
+    border: 0;
+    border-radius: .5rem;
+}
