--- a/views/degree-audit.ejs
+++ b/views/degree-audit.ejs
@@ -18,14 +18,10 @@ for (let category of Object.keys(data)){
 }%>
 <div class="container">
     <div class="row">
-        <div class="mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title text-center">
-                        Graduate Student Tracking System
-                    </h3>
-                </div>
-            </div>
+        <div class="mb-3">                          
+            <h3 class="text-center">
+                    Graduate Student Tracking System
+            </h3> 
         </div>
     </div>
     <div class="row">
@@ -35,8 +31,8 @@ for (let category of Object.keys(data)){
                     <h5 class="card-title text-center">Degree Audit</h5>
                     <p class="card-text">Some text here.</p>
                     <div class="table-responsive">
-                        <table class="table table-bordered center">
-                            <thead>
+                        <table class="table center">
+                            <thead align="center">
                             <tr class="table-warning">
                                 <th scope="col">Category</th>
                                 <th scope="col">Progress</th>
@@ -47,93 +43,121 @@ for (let category of Object.keys(data)){
                             </thead>
                             <tbody class="table-group-divider">
                             <tr>
-                                <th scope="row" class="table-primary">Core</th>
-                                <td><%= data['core']['progress']['takenNum'] %>
-                                    /<%= data['core']['progress']['requiredNum'] %></td>
-                                <td>
-                                    <% for (let i = 0; i < data['core']['taken'].length; i++){ %>
-                                        <%= data['core']['taken'][i] %><br>
-                                    <% } %>
-                                </td>
-                                <td></td>
-                                <td><%= data['core']['progress']['credit'] %></td>
-                            </tr>
-                            <tr>
                                 <th scope="row" class="table-success">Information</th>
-                                <td><%= data['information']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['information']['progress']['takenNum'] %>
                                     /<%= data['information']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['information']['taken'].length; i++){ %>
                                         <%= data['information']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['information']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['information']['recommend'].length; i++){ %>
+                                        <%= data['information']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['information']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">Services and Organizations</th>
-                                <td><%= data['servicesAndOrganizations']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['servicesAndOrganizations']['progress']['takenNum'] %>
                                     /<%= data['servicesAndOrganizations']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['servicesAndOrganizations']['taken'].length; i++){ %>
                                         <%= data['servicesAndOrganizations']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['servicesAndOrganizations']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['servicesAndOrganizations']['recommend'].length; i++){ %>
+                                        <%= data['servicesAndOrganizations']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['servicesAndOrganizations']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">Technology</th>
-                                <td><%= data['technology']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['technology']['progress']['takenNum'] %>
                                     /<%= data['technology']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['technology']['taken'].length; i++){ %>
                                         <%= data['technology']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['technology']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['technology']['recommend'].length; i++){ %>
+                                        <%= data['technology']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['technology']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-success">People and Communication</th>
-                                <td><%= data['peopleAndCommunities']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['peopleAndCommunities']['progress']['takenNum'] %>
                                     /<%= data['peopleAndCommunities']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['peopleAndCommunities']['taken'].length; i++){ %>
                                         <%= data['peopleAndCommunities']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['peopleAndCommunities']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['peopleAndCommunities']['recommend'].length; i++){ %>
+                                        <%= data['peopleAndCommunities']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['peopleAndCommunities']['progress']['credit'] %></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="table-primary">Core</th>
+                                <td class="tb-center"><%= data['core']['progress']['takenNum'] %>
+                                    /<%= data['core']['progress']['requiredNum'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['core']['taken'].length; i++){ %>
+                                        <%= data['core']['taken'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td>
+                                    <% for (let i = 0; i < data['core']['recommend'].length; i++){ %>
+                                        <%= data['core']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['core']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-info">Capstone</th>
-                                <td><%= data['capstone']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['capstone']['progress']['takenNum'] %>
                                     /<%= data['capstone']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['capstone']['taken'].length; i++){ %>
                                         <%= data['capstone']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['capstone']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['capstone']['recommend'].length; i++){ %>
+                                        <%= data['capstone']['recommend'][i] %><br>
+                                    <% } %>
+                                </td>
+                                <td class="tb-center"><%= data['capstone']['progress']['credit'] %></td>
                             </tr>
                             <tr>
                                 <th scope="row" class="table-secondary">Elective</th>
-                                <td><%= data['elective']['progress']['takenNum'] %>
+                                <td class="tb-center"><%= data['elective']['progress']['takenNum'] %>
                                     /<%= data['elective']['progress']['requiredNum'] %></td>
                                 <td>
                                     <% for (let i = 0; i < data['elective']['taken'].length; i++){ %>
                                         <%= data['elective']['taken'][i] %><br>
                                     <% } %>
                                 </td>
-                                <td></td>
-                                <td><%= data['elective']['progress']['credit'] %></td>
+                                <td>
+                                    <% for (let i = 0; i < data['elective']['recommend'].length; i++){ %>
+                                        <%= data['elective']['recommend'][i] %><br>
+                                    <% } %> 
+                                </td>
+                                <td class="tb-center"><%= data['elective']['progress']['credit'] %></td>
                             </tr>
                             <tr>
-                                <th scope="row" class="table-dark">Total</th>
-                                <td colspan="3"></td>
-                                <td><%= total%>/48</td>
+                                <th scope="row" class="table-dark">Total Credits</th>
+                                <!-- <td colspan="3"></td> -->
+                                <td colspan="4" class="tb-center" style="font-weight:650"><%= total%>/48</td>
                             </tr>
                             </tbody>
                         </table>
