--- a/views/add-courses.ejs
+++ b/views/add-courses.ejs
@@ -78,6 +78,26 @@
                                 <button type="button" onclick="addCourse()" class="button-add">Add</button>
                             </div>
                         </div>
+                        <label for="extraCourseSelect" class="form-label">Other Course</label>
+                        <div class="mb-4 row" id="extraCourseSelect">
+                            <div class="col-2">
+                                <input type="text" class="form-control" placeholder="INLS" id="extraCourseSubject">
+                            </div>
+                            <div class="col-2">
+                                <input type="text" class="form-control" placeholder="0000" id="extraCourseNumber">
+                            </div>
+                            <div class="col-6">
+                                <select class="form10-select form-select" aria-label=".form-select example"
+                                        id="extraCourseBin">
+                                    <% for (let bin of bins){ %>
+                                        <option value=<%= bin[0] %>><%= bin[1]%></option>
+                                    <% } %>
+                                </select>
+                            </div>
+                            <div class="col-2">
+                                <button type="button" onclick="addExtraCourse()" class="button-add">Add</button>
+                            </div>
+                        </div>
                         <div>
                             <button class="button-81">Generate Degree Audit</button>
                             <button class="button-81" onclick="changeAddress()">Save</button>
@@ -138,6 +158,51 @@
         }
         courseNode.className = "list-group-item";
         courseNode.id = course.options[course.selectedIndex].text;
+        removeButton.className = "btn-remove right";
+        removeButton.addEventListener("click", function () {
+            let newValue = [];
+            for (let value of courseAdd.value.split('&&&')) {
+                if (value !== removeButton.parentNode.id) {
+                    newValue.push(value);
+                }
+            }
+            courseAdd.value = newValue.join('&&&');
+            courseSection.removeChild(courseNode);
+        });
+        courseNode.append(courseNodeText);
+        removeButton.append(removeButtonText);
+        courseNode.append(removeButton);
+        courseSection.appendChild(courseNode);
+    }
+
+    function addExtraCourse() {
+        const removeButton = document.createElement("button");
+        const removeButtonText = document.createTextNode("Remove");
+        const courseSection = document.getElementById("courseSection");
+        const courseNode = document.createElement("li");
+        const courseSubject = document.getElementById("extraCourseSubject").value.toUpperCase();
+        const courseNumber = document.getElementById("extraCourseNumber").value.toUpperCase();
+        const courseBin = document.getElementById("extraCourseBin");
+        const courseName = courseSubject + " " + courseNumber;
+        const courseNameBin = courseName + " - (" + courseBin.options[courseBin.selectedIndex].text + ")";
+        const courseNodeText = document.createTextNode(courseNameBin.toUpperCase());
+        const courseAdd = document.getElementById("courseAdd");
+        // Avoid adding duplicate courses
+        for (let courseAdded of courseAdd.value.split("&&&")) {
+            const courseAddedName = courseAdded.split(" - ")[0];
+            if (courseName === courseAddedName) {
+                alert("You have already added this course.");
+                return;
+            }
+        }
+
+        if (courseAdd.value.length !== 0) {
+            courseAdd.value += "&&&" + courseNameBin;
+        } else {
+            courseAdd.value = courseNameBin;
+        }
+        courseNode.className = "list-group-item";
+        courseNode.id = courseNameBin;
         removeButton.className = "btn-remove right";
         removeButton.addEventListener("click", function () {
             let newValue = [];
