--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,149 +1,159 @@
 .right {
-    float: right;
+  float: right;
 }
 
 .center {
-    display: inline-block;
+  display: inline-block;
 }
 
 body {
-    background: #d5ecfc;
+  background: #d5ecfc;
 }
 
 h3 {
-    padding: 20px 30px;
-    font-size: 40px;
+  padding: 20px 30px;
+  font-size: 40px;
 }
 
 h5 {
-    padding: 20px 20px;
-    font-size: 25px;
-    font-weight: 400;
-    color: #13294B;
+  padding: 20px 20px;
+  font-size: 25px;
+  font-weight: 400;
+  color: #13294b;
 }
 
 .container {
-    padding: 33px 30px;
+  padding: 33px 30px;
 }
 
 .card {
-
-    border: 0;
-    border-radius: 0.75rem;
+  border: 0;
+  border-radius: 0.75rem;
 }
 
 .button-81 {
-    background-color: #1e293b;
-    color: rgb(245, 238, 238);
-    border: 0;
-    border-radius: 1.5rem;
-    box-sizing: border-box;
-    cursor: pointer;
-    display: inline-block;
-    line-height: 1;
-    padding: 0.75rem 1rem;
-    transition: all .1s cubic-bezier(.4, 0, .2, 1);
-    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
-    touch-action: manipulation;
+  background-color: #1e293b;
+  color: rgb(245, 238, 238);
+  border: 0;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 0.75rem 1rem;
+  transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  touch-action: manipulation;
 }
 
 .button-81:hover {
-    background-color: #fff;
-    color: #1e293b;
+  background-color: #fff;
+  color: #1e293b;
 }
 
 .button-add {
-    background-color: #aae7fa;
-    border: 0;
-    border-radius: .5rem;
-    font-size: 1rem;
-    padding: .4rem 1rem;
-    text-align: center;
-    cursor: pointer;
+  background-color: #aae7fa;
+  border: 0;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  padding: 0.4rem 1rem;
+  text-align: center;
+  cursor: pointer;
 }
 
 .button-add:hover {
-    background-color: rgb(249, 250, 251);
+  background-color: rgb(249, 250, 251);
 }
 
 .button-add:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .button-38:focus-visible {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .btn-remove {
-    background-color: #b3babd;
-    border: 0;
-    border-radius: .5rem;
-    font-size: 1rem;
-    padding: .4rem 1rem;
-    text-align: center;
-    cursor: pointer;
+  background-color: #b3babd;
+  border: 0;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  padding: 0.4rem 1rem;
+  text-align: center;
+  cursor: pointer;
 }
 
 .btn-remove:hover {
-    background-color: #dfdede;
+  background-color: #dfdede;
 }
 
 .table-responsive {
-    border: 0;
-    border-radius: .5rem;
+  border: 0;
+  border-radius: 0.5rem;
 }
 
 .table-warning {
-    height: 50px;
-    background: #36304a;
-    --bs-table-bg: 0;
-    color: #fff;
-    line-height: 1.2;
-    font-size: 18px;
+  height: 50px;
+  background: #36304a;
+  --bs-table-bg: 0;
+  color: #fff;
+  line-height: 1.2;
+  font-size: 18px;
 }
 
 .table-success {
-    --bs-table-bg: #e0ecf3;
-    text-align: center;
-    vertical-align: middle;
+  --bs-table-bg: #e0ecf3;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .table-primary {
-    border-color: transparent;
-    --bs-table-bg: #bfcbe1;
-    text-align: center;
-    vertical-align: middle;
+  border-color: transparent;
+  --bs-table-bg: #bfcbe1;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .table-info {
-    border-color: transparent;
-    --bs-table-bg: #c6dce9;
-    text-align: center;
-    vertical-align: middle;
+  border-color: transparent;
+  --bs-table-bg: #c6dce9;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .table-secondary {
-    border-color: transparent;
-    --bs-table-bg: #e9edf7;
-    text-align: center;
-    vertical-align: middle;
+  border-color: transparent;
+  --bs-table-bg: #e9edf7;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .table-dark {
-    border-color: transparent;
-    --bs-table-bg: #b3cde1;
-    text-align: center;
-    vertical-align: middle;
-    --bs-table-color: rgb(1, 1, 1);
-
+  border-color: transparent;
+  --bs-table-bg: #b3cde1;
+  text-align: center;
+  vertical-align: middle;
+  --bs-table-color: rgb(1, 1, 1);
 }
 
 .tb-center {
-    text-align: center;
-    vertical-align: middle;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.warn {
-    background-color: red;
+.symbol {
+  font-size: 1.4rem;
+}
+
+.warning1 {
+  color: #f4ae17;
+}
+
+.warning2 {
+  color: red;
+}
+
+.check {
+  color: green;
 }
